Homepage, Supporter still needs spacing fix

--- a/hero-fronend/src/Components/pledgeForum/pledgeForum.css
+++ b/hero-fronend/src/Components/pledgeForum/pledgeForum.css
@@ -31,5 +31,27 @@
 }
 
 .p-headline {
-    
+    font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 22px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #FFFFFF;
+}
+
+.p-end {
+    font-style: italic;
+font-weight: 400;
+font-size: 18px;
+line-height: 22px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #FFFFFF;
+
+
 }
